--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,8 @@ version: "3"
 services:
   database:
     image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
+    env_file:
+      - .env
     ports:
       - 3308:3306
     restart: always
