--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "start": "node src/index.js",
+    "build": "",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.2.5",
-    "nodemon": "^2.0.22",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "dotenv": "^16.1.4",
