feat: mounting bind volume for autorealoading

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "build": "",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js -L"
   },
   "keywords": [],
   "author": "",
