--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,11 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8080:8080
+      - 8080:8080   
+
+    volumes:
+      - ./:/app
+      - /app/node_modules
     env_file:
       - .env
     restart: always
